--- a/code/Node/simple-hmr/package.json
+++ b/code/Node/simple-hmr/package.json
@@ -13,6 +13,9 @@
     "@babel/parser": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/traverse": "^7.10.1",
-    "memfs": "^3.2.0"
+    "chokidar": "^3.4.0",
+    "express": "^4.17.1",
+    "memfs": "^3.2.0",
+    "socket.io": "^2.3.0"
   }
 }
